--- a/index.html
+++ b/index.html
@@ -90,39 +90,54 @@
             <div class="content-bottom">
                 <ul class="content-bottom_list flex">
                     <li class="content-bottom_list-item">
-                        <h4>01</h4>
-                        <a href="#">
-                            <h5>Reviving Retro PCs</h5>
-                        </a>
-                        <p>
-                            What happens when old PCs are given modern upgrades?
-                        </p>
+                        <div class="content-bottom_list-item-content flex">
+                            <div class="cont-bottom_list-item-img img-1"></div>
+                            <div class="cont-bottom_list-item-text">
+                                <h4>01</h4>
+                                <a href="#">
+                                    <h5>Reviving Retro PCs</h5>
+                                </a>
+                                <p>
+                                    What happens when old PCs are given modern upgrades?
+                                </p>
+                            </div>
+                        </div>
                     </li>
                     <li class="content-bottom_list-item">
-                        <h4>02</h4>
-                        <a href="#">
-                            <h5>Top 10 Laptops of 2022</h5>
-                        </a>
-                        <p>
-                            Our best picks for various needs and budgets.
-                        </p>
+                        <div class="content-bottom_list-item-content flex">
+                            <div class="cont-bottom_list-item-img img-2"></div>
+                            <div class="cont-bottom_list-item-text">
+                                <h4>02</h4>
+                                <a href="#">
+                                    <h5>Top 10 Laptops of 2022</h5>
+                                </a>
+                                <p>
+                                    Our best picks for various needs and budgets.
+                                </p>
+                            </div>
+                        </div>
                     </li>
                     <li class="content-bottom_list-item">
-                        <h4>03</h4>
-                        <a href="#">
-                            <h5>The Growth of Gaming</h5>
-                        </a>
-                        <p>
-                            How the pandemic has sparked fresh opportunities.
-                        </p>
+                        <div class="content-bottom_list-item-content flex">
+                            <div class="cont-bottom_list-item-img img-3"></div>
+                            <div class="cont-bottom_list-item-text">
+                                <h4>03</h4>
+                                <a href="#">
+                                    <h5>The Growth of Gaming</h5>
+                                </a>
+                                <p>
+                                    How the pandemic has sparked fresh opportunities.
+                                </p>
+                            </div>
+                        </div>
                     </li>
                 </ul>
             </div>
         </div>
-    </div>
-    <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Your Name Here</a>.
+        <footer class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+            Coded by <a href="https://www.frontendmentor.io/profile/devspidersilva">Anderson Silva</a>.
+        </footer>
     </div>
 </body>
 
