Efeito hover nos links

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <input type="checkbox" name="check-menu" id="check-menu" class="check-menu">
         <div class="bg-dar-transparent"></div>
         <div class="menu">
-            <img class="menu-logo" src="assets/images/logo.svg" alt="Logo">
+            <a href="#"><img class="menu-logo" src="assets/images/logo.svg" alt="Logo"></a>
             <label for="check-menu" class="check-menu_label">
             </label>
             <div class="menu-list-position">
@@ -44,9 +44,9 @@
                             <!-- Imagem aqui -->
                         </div>
                         <header class="principal-title">
-                            <h2>
+                            <h1>
                                 The Bright Future of Web 3.0?
-                            </h2>
+                            </h1>
                         </header>
                         <div class="text-btn flex">
                             <p>
@@ -65,9 +65,9 @@
                     </section>
                 </main>
                 <aside class="side-bar">
-                    <h3>
+                    <h2>
                         New
-                    </h3>
+                    </h2>
                     <ul class="side-bar_list flex">
                         <li class="side-bar_list-item">
                             <a href="#"><h4>Hydrogen VS Electric Cars</h4></a>
@@ -93,9 +93,9 @@
                         <div class="content-bottom_list-item-content flex">
                             <div class="cont-bottom_list-item-img img-1"></div>
                             <div class="cont-bottom_list-item-text">
-                                <h4>01</h4>
+                                <h3>01</h3>
                                 <a href="#">
-                                    <h5>Reviving Retro PCs</h5>
+                                    <h4>Reviving Retro PCs</h4>
                                 </a>
                                 <p>
                                     What happens when old PCs are given modern upgrades?
@@ -107,9 +107,9 @@
                         <div class="content-bottom_list-item-content flex">
                             <div class="cont-bottom_list-item-img img-2"></div>
                             <div class="cont-bottom_list-item-text">
-                                <h4>02</h4>
+                                <h3>02</h3>
                                 <a href="#">
-                                    <h5>Top 10 Laptops of 2022</h5>
+                                    <h4>Top 10 Laptops of 2022</h4>
                                 </a>
                                 <p>
                                     Our best picks for various needs and budgets.
@@ -121,9 +121,9 @@
                         <div class="content-bottom_list-item-content flex">
                             <div class="cont-bottom_list-item-img img-3"></div>
                             <div class="cont-bottom_list-item-text">
-                                <h4>03</h4>
+                                <h3>03</h3>
                                 <a href="#">
-                                    <h5>The Growth of Gaming</h5>
+                                    <h4>The Growth of Gaming</h4>
                                 </a>
                                 <p>
                                     How the pandemic has sparked fresh opportunities.
